--- a/views/add.erb
+++ b/views/add.erb
@@ -2,8 +2,8 @@
 
 <form action="/add" method="post">
   <p>
-    <label for='recipe'><h3>Recipe Name</h3></label>
-    <input type="text" required minlength='5' maxlength='50' id='recipe' name="recipe_name" value="">
+    <label for='title'><h3>Recipe Name</h3></label>
+    <input type="text" required minlength='5' maxlength='50' id='title' name='title' value="">
   </p>
 
   <label for='ingredients'><h3>Ingredients</h3></label>
@@ -14,7 +14,7 @@
 </p>
 
   <p>
-    <label for="image"><h3>Upload an image</h3></label>
+    <label for="image"><h3>Add an image link</h3></label>
     <input type="text" id='image' name="image" value="">
   </p>
 
