--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Recipes</title>
+    <link href="https://fonts.googleapis.com/css?family=Oleo+Script|Source+Sans+Pro:400,400i" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/recipes.css" type="text/css" />
   </head>
   <body>
