--- a/views/recipes.erb
+++ b/views/recipes.erb
@@ -5,16 +5,16 @@
   <li>
   <a href='/recipe/<%= id %>'><%= recipe[1][:title] %></a>
   <form class='inline' action='/delete/<%= id %>' method='post'>
-    <button type='submit' name='delete'>Delete</button>
+    <button type='submit' class='delete' name='delete'>Delete</button>
   </form>
   </li>
   <% end %>
 </ul>
 
-<a href='/add'><button type='button' name='add'>Add a Recipe</button></a>
+<a href='/add'><button type='button' class='add' name='add'>Add a Recipe</button></a>
 <p>
-<form class='signout' action='/signout' method='post'>
-  <button type='submit' name='signout'>Signout</button>
+<form action='/signout' method='post'>
+  <button type='submit' class='signout' name='signout'>Signout</button>
 </form>
 <!-- <p>signed in as <%= session[:username] %></p> -->
 </p>
