--- a/views/register.erb
+++ b/views/register.erb
@@ -10,7 +10,7 @@
   <table>
     <tr>
       <td>
-        <button type="submit" name="button">Register</button>
+        <button type="submit" class='register' name="button">Register</button>
       </td>
       <td>
         <a href="/register/cancel"><button type="button" class='cancel' name="cancel">Cancel</button></a>
@@ -18,5 +18,7 @@
     </tr>
   </table>
 </form>
-Already have an account? Sign In instead!
-<a href="/signin"><button type="button" name="button">Sign In</button></a>
+<p class='italic'>
+  Already have an account? Sign In instead!
+  <a href="/signin"><button type="button" class='signin' name="button">Sign In</button></a>
+</p>
