--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -3,10 +3,10 @@
 <table>
   <tr>
     <td>
-      <a href="/signin"><button type="button" name="button">Sign In</button></a>
+      <a href="/signin"><button type="button" class='signin' name="button">Sign In</button></a>
     </td>
     <td>
-      <a href="/register"><button type="button" name="button">Register</button></a>
+      <a href="/register"><button type="button" class='register' name="button">Register</button></a>
     </td>
   </tr>
 </table>
