--- a/views/signin.erb
+++ b/views/signin.erb
@@ -10,7 +10,7 @@
   <table>
     <tr>
       <td>
-        <button type="submit" name="button">Sign In</button>
+        <button type="submit" class='signin' name="button">Sign In</button>
       </td>
       <td>
         <a href="/signin/cancel"><button type="button" class='cancel' name="cancel">Cancel</button></a>
@@ -18,5 +18,7 @@
     </tr>
   </table>
 </form>
-Don't have an account? Register instead!
-<a href="/register"><button type="button" name="button">Register</button></a>
+<p class='italic'>
+  Don't have an account? Register instead!
+  <a href="/register"><button type="button" class='register' name="button">Register</button></a>
+</p>
