--- a/public/stylesheets/recipes.css
+++ b/public/stylesheets/recipes.css
@@ -4,12 +4,19 @@ font-family: 'Oleo Script', cursive; */
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
+  font-size: 16px;
   background-color: #5ca3cf;
+  padding: 10px;
 }
 
 h1,
 h2 {
   font-family: 'Oleo Script', cursive;
+  margin: 0px;
+}
+
+p {
+  margin: 2px auto 5px auto;
 }
 
 h4 {
@@ -46,8 +53,21 @@ a:hover {
   color: rgb(20, 133, 204);
 }
 
+input,
+textarea {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 80%;
+}
+
+ul {
+  padding: 0;
+}
+
 li {
-  list-style-type: square;
+  list-style-type: none;
+  margin-top: 8px;
+  padding-left: 0;
+  list-style-position: inside;
 }
 
 button {
