--- a/views/add.erb
+++ b/views/add.erb
@@ -3,26 +3,26 @@
 <form action="/add" method="post">
   <p>
     <label for='title'><h4>Recipe Name</h4></label>
-    <input type="text" required minlength='5' maxlength='50' id='title' name='title' value="<%= session[:title] %>">
+    <input type="text" required minlength='5' maxlength='50' id='title' name='title' value="<%= @title || session[:title] %>">
   </p>
 
   <p>
     <label for='ingredients'><h4>Ingredients</h4></label>
-    <textarea type="textarea" required rows='5' cols='80' id='ingredients' name="ingredients" value="<%= session[:ingredients] %>"></textarea>
+    <textarea type="textarea" required rows='5' cols='80' id='ingredients' name="ingredients" value=""><%= @ingredients || session[:ingredients] %></textarea>
   </p>
 
   <p>
     <label for='directions'><h4>Directions</h4></label>
-    <textarea type="textarea" required rows='5' cols='80' id='directions' name="directions" value="<%= session[:directions] %>"></textarea>
+    <textarea type="textarea" required rows='5' cols='80' id='directions' name="directions" value=""><%= @directions || session[:directions] %></textarea>
   </p>
 
   <p>
     <label for="image"><h4>Add an image link</h4></label>
-    <input type="text" id='image' name="image" value="">
+    <input type="text" id='image' name="image" value="<%= @image || params[:image] %>">
   </p>
 
   <label for='notes'><h4>Notes</h4></label>
-  <textarea type="textarea" rows='5' cols='80' id='notes' name="notes" value="<%= session[:notes] %>"></textarea>
+  <textarea type="textarea" rows='5' cols='80' id='notes' name="notes" value=""><%= @notes || session[:notes] %></textarea>
 
   <p>
     <button type="submit" class='add' name="button">Add</button>
