--- a/views/view_recipe.erb
+++ b/views/view_recipe.erb
@@ -1,3 +1,4 @@
+<%= @recipes %>
 <% recipe = @recipes[@id] %>
 <div class='recipe'>
   <div class='title'>
@@ -9,23 +10,17 @@
 
   <div class='ingredients'>
     <h2>Ingredients</h2>
-    <% recipe[:ingredients].each do |item|  %>
-      <li><%= item %></li>
-    <% end %>
+    <% recipe[:ingredients].each do |item| %><li><%= item %></li><% end %>
     <br>
     <a href='/edit/<%= @id %>/ingredients'><button type='button' class='edit' name='edit'>Edit</button></a>
   </div>
 
-
-  <div class='directions'>
-    <h2>Directions</h2>
-    <% recipe[:directions].each do |step|  %>
-      <li><%= step %></li>
-    <% end %>
+  <div class='instructions'>
+    <h2>Instructions</h2>
+    <% recipe[:instructions].each do |step|  %><li><%= step %></li><% end %>
     <br>
-    <a href='/edit/<%= @id %>/directions'><button type='button' class='edit' name='edit'>Edit</button></a>
+    <a href='/edit/<%= @id %>/instructions'><button type='button' class='edit' name='edit'>Edit</button></a>
   </div>
-
 
   <div class='notes'>
     <h2>Notes</h2>
