--- a/views/view_recipe.erb
+++ b/views/view_recipe.erb
@@ -1,4 +1,3 @@
-<%= @recipes %>
 <% recipe = @recipes[@id] %>
 <div class='recipe'>
   <div class='title'>
@@ -6,7 +5,12 @@
     <a class='edit_title' href='/edit/<%= @id %>/title'><button type='button' class='edit' name='edit'>Edit</button></a>
   </div>
 
-  <img class='recipe_image' src='<%= recipe[:image] %>' alt='food'>
+  <% if recipe[:image].empty? %>
+    <a href="/image/<%= @id %>"><button type="button" name="button">Add photo</button></a>
+  <% else %>
+    <img class='recipe_image' src='<%= recipe[:image] %>' alt='food'>
+    <a href="/image/<%= @id %>"><button type="button" name="button">Change photo</button></a>
+  <% end %>
 
   <div class='ingredients'>
     <h2>Ingredients</h2>
