--- a/public/stylesheets/recipes.css
+++ b/public/stylesheets/recipes.css
@@ -110,88 +110,58 @@ button {
 /* RECIPE DISPLAY */
 
 .recipe {
+  display: grid;
   width: 800px;
+  grid-template-columns: repeat(16, 50px);
+  grid-template-rows: 30;
 }
 
 .title {
+  grid-column: 1 / 18;
+  grid-row: 1 / 2;
   text-align: center;
 }
 
 .recipe_image {
-  width: 600px;
-  margin: 10px 100px;
+  margin-top: 10px;
+  width: 400px;
+  grid-column: 5 / 13;
+  grid-row: 2 / 7;
 }
 
-.recipe-button {
-  margin: 0 0 20px 280px;
+.image-buttons {
+  margin-top: 10px;
+  text-align: center;
+  grid-row: 7 / 8;
+  grid-column: 5 / 13;
 }
 
-.add-image {
-  margin: 5px 0 0 32%;
-}
-
-.ingredients {
-  float: left;
-  margin-bottom: 20px;
-}
-
-.instructions {
-  float: right;
-  margin-right: 20%;
-}
-
-.notes {
-  clear: both;
-}
-
-.edit-notes {
-  margin-top: 20px;
-}
-
-.bottom-buttons {
-  margin-left: 32%;
-}
-
-.signout {
-  margin-left: 30%;
-  margin-top: 5px;
-}
-
-/* .recipe {
+.how-to {
+  margin-top: 10px;
+  grid-row: 8 / 13;
   display: grid;
   width: 800px;
-  grid-template-rows: 20;
-  grid-template-columns: 100;
-}
-
-.title {
-  grid-column: 4 / 5;
-  grid-row: 1 / 2;
-  vertical-align: center;
-}
-
-.recipe_image {
-  width: 400px;
-  grid-column: 3 / 7;
-  grid-row: 3 / 7;
 }
 
 .ingredients {
-  grid-column: 2 / 5;
+  grid-column: 1 / 8;
   grid-row: 8 / 13;
 }
 
 .instructions {
-  grid-column: 5 / 9;
+  grid-column: 8 / 18;
   grid-row: 8 / 13;
 }
 
 .notes {
-  grid-column: 2 / 8;
+  margin-top: 10px;
+  grid-column: 1 / 9;
   grid-row: 14 / 18;
 }
 
-.buttons {
-  grid-column: 3 / 5;
-  grid-row: 19 / 19;
-} */
+.bottom-buttons {
+  margin-top: 10px;
+  text-align: center;
+  grid-column: 5 / 13;
+  grid-row: 18 / 18;
+}
