--- a/views/image.erb
+++ b/views/image.erb
@@ -6,13 +6,13 @@
   </form>
 <% end %>
 <form class="" action="/image/<%= @id %>" method="post">
-  <% if recipe[:image].empty? %>
+  <% if no_image?(@id) %>
     <label for="image"><h4>Add an image link</h4></label>
     <input type="text" id='image' required name="image" value="<%= @image || params[:image] %>">
     <button type="submit" class='edit' name="button">Add Image</button>
   <% else %>
     <h4>Current image</h4>
-    <img src='<%= recipe[:image] %>' alt="food">
+    <img src='<%= recipe[:image] %>' class='image' alt="food">
     <label for="image"><h4>Update image: add an image link</h4></label>
     <input type="text" id='image' required name="image" value="<%= @image || params[:image] %>">
     <button type="submit" class='edit' name="button">Update Image</button>
