--- a/views/recipes.erb
+++ b/views/recipes.erb
@@ -15,4 +15,4 @@
   <a href='/add'><button type='button' class='add' name='add'>Add a Recipe</button></a>
   <button type='submit' class='signout' name='signout'>Signout</button>
 </form>
-<!-- <p>signed in as <%= session[:username] %></p> -->
+<p class='italic'>Signed in as <%= session[:username] %>.</p>
