Adds length requirements to registration fields

--- a/views/register.erb
+++ b/views/register.erb
@@ -2,10 +2,10 @@
 
 <form action="/register" method="post">
   <label for='username'>Username:</label>
-  <input type="text" id='username' name="username" value="">
+  <input type="text" id='username' minlength='6' maxlength='20' name="username" value="">
 
   <label for='password'>Password:</label>
-  <input type="password" id='password' name="password" value="">
+  <input type="password" id='password' minlength='8' maxlength='20' name="password" value="">
 
   <table>
     <tr>
