Adds credential verification to display contents

--- a/views/view_recipe.erb
+++ b/views/view_recipe.erb
@@ -51,8 +51,8 @@
   </div>
 </div>
 <p>
-<form action='/signout' method='post'>
-  <button type='submit' class='signout' name='signout'>Signout</button>
-</form>
-<!-- <p>signed in as <%= session[:username] %></p> -->
+  <form action='/signout' method='post'>
+    <button type='submit' class='signout' name='signout'>Signout</button>
+  </form>
+  <p class='italic'>signed in as <%= session[:username] %></p>
 </p>
