Adds ability to view uploaded images

--- a/views/view_recipe.erb
+++ b/views/view_recipe.erb
@@ -10,7 +10,7 @@
       <a href="/image/<%= @id %>"><button type="button" class='edit' name="button">Add image</button></a>
     </div>
   <% else %>
-    <img class='recipe_image' src='<%= recipe[:image] %>' alt='food'>
+    <img class='recipe_image' src='<%= get_image_path(recipe[:image]) %>' alt='food'>
     <div class='image-buttons'>
       <a href="/image/<%= @id %>"><button type="button" class='edit' name="button">Change image</button></a>
       <form class='inline' action="/image/<%= @id %>/delete" method="post">
