--- a/views/add.erb
+++ b/views/add.erb
@@ -1,13 +1,13 @@
 <h1>Add a Recipe</h1>
 
-<form action="/add" method="post">
+<form enctype="multipart/form-data" action="/add" method="post">
   <p>
-    <label for='title'><h4>Recipe Name</h4></label>
+    <label for='title'><h4>Recipe Name*</h4></label>
     <input type="text" required minlength='5' maxlength='50' id='title' name='title' value="<%= @title || session[:title] %>">
   </p>
 
   <p>
-    <label for='ingredients'><h4>Ingredients</h4></label>
+    <label for='ingredients'><h4>Ingredients*</h4></label>
     <textarea type="textarea" required rows='5' cols='80' id='ingredients' name="ingredients" value="">
 <% if @ingredients %>
 <% @ingredients.each do |item| %>
@@ -20,7 +20,7 @@
   </p>
 
   <p>
-    <label for='instructions'><h4>Instructions</h4></label>
+    <label for='instructions'><h4>Instructions*</h4></label>
     <textarea type="textarea" required rows='5' cols='80' id='instructions' name="instructions" value="">
 <% if @instructions %>
 <% @instructions.each do |step| %>
@@ -32,10 +32,16 @@
     </textarea>
   </p>
 
-  <p>
-    <label for="image"><h4>Add an image link</h4></label>
-    <input type="text" id='image' name="image" value="<%= @image || params[:image] %>">
-  </p>
+  <label for="image-pick">Add an image?*</label>
+  <input required type="radio" id='image-pick' name="image_pick" value="link">link</input>
+  <input type="radio" id='image-pick' name="image_pick" value="upload">upload</input>
+  <input type="radio" id='image-pick' name="image_pick" value="none">none</input>
+
+  <label for="image"><h4>Add an image link</h4></label>
+  <input type="text" id='image' name="image" value="<%= @image || params[:image] %>">
+  <h4>OR</h4>
+  <label for='upload_image'><h4>Upload an image</h4></label>
+  <input type='file' id='upload_image' accept='image/*' name='upload_image' value=''>
 
   <label for='notes'><h4>Notes</h4></label>
   <textarea type="textarea" rows='5' cols='80' id='notes' name="notes" value=""><%= @notes || session[:notes] %></textarea>
