--- a/views/recipes.erb
+++ b/views/recipes.erb
@@ -1,5 +1,5 @@
 <h1>My Recipes</h1>
-<% if verify_recipes? %>
+<% if verify_recipes? && @recipes.class == Hash %>
   <%= @recipes %>
   <ul>
     <% sort_recipes.each do |recipe| %>
