--- a/views/view_recipe.erb
+++ b/views/view_recipe.erb
@@ -9,8 +9,8 @@
     <div class='image-buttons'>
       <a href="/image/<%= @id %>"><button type="button" class='edit' name="button">Add image</button></a>
     </div>
-  <% elsif recipe[:image].empty? %>
-    <img class='recipe_image' src='<%= get_image_path(recipe[:upload]) %>' alt='food'>
+  <% elsif link_empty?(@id) %>
+    <img class='recipe_image' src='<%= image_path(recipe[:upload]) %>' alt='food'>
     <div class='image-buttons'>
       <a href="/image/<%= @id %>"><button type="button" class='edit' name="button">Change image</button></a>
       <form class='inline' action="/image/<%= @id %>/delete" method="post">
