--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,11 +1,11 @@
-<h1>Edit <%= @subject %> for "<%= @recipes[@id][:title] %>"</h1>
+<h1>Edit <%= @subject.capitalize %> for "<%= @recipes[@id][:title] %>"</h1>
 
 <form class="" action="/edit/<%= @id %>/<%= @subject %>" method="post">
   <% case @subject %>
-  <% when 'Title' %>
+  <% when 'title' %>
     <label for='title'><h4>New Name</h4></label>
-    <input type="text" name='title' required placeholder='<%= @title || @recipes[@id][:title] %>' value="<%= @title || session[:title] %>">
-  <% when 'Ingredients' %>
+    <input type="text" name='title' required placeholder='<%= @title || @recipes[@id][:title] %>' value="<%= @title || @recipes[@id][:title] %>">
+  <% when 'ingredients' %>
   <label for='ingredients'><h4>Ingredients</h4></label>
   <textarea type="textarea" required rows='5' cols='80' id='ingredients' name="ingredients" value="">
 <% ingredients = @recipes[@id][:ingredients] %>
@@ -13,14 +13,14 @@
 <%= item %>
   <% end %>
   </textarea>
-  <% when 'Instructions' %>
+  <% when 'instructions' %>
   <label for='instructions'><h4>Instructions</h4></label>
   <textarea type="textarea" required rows='5' cols='80' id='instructions' name="instructions" value="">
 <% instructions = @recipes[@id][:instructions] %>
 <% instructions.each do |step| %>
 <%= step %>
 <% end %></textarea>
-  <% when 'Notes' %>
+  <% when 'notes' %>
   <label for='notes'><h4>Notes</h4></label>
   <textarea type="textarea" required rows='5' cols='80' id='notes' name="notes" value=""><%= @recipes[@id][:notes] %></textarea>
   <% end %>
