--- a/views/recipes.erb
+++ b/views/recipes.erb
@@ -1,6 +1,5 @@
 <h1>My Recipes</h1>
-<% if verify_recipes? && @recipes.class == Hash %>
-  <%= @recipes %>
+<% if verify_recipes? %>
   <ul>
     <% sort_recipes.each do |recipe| %>
     <% id = recipe[0] %>
